feat: Add RSpec and Capybara gems to app as well as testing for the Welcome Index

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome To The Poké Wiki</h1>
+<h1>Welcome To The Poké Wiki!</h1>
 
 <ul>
   <li><a href="/pocket_monsters">Pokémon Index</a></li>
